# ai-chatbot-api

./: .coderabbit.yaml  .env.example  Makefile  README.md  compose.yml  package.json  pnpm-lock.yaml  todo.md
.cursor/: mcp.json
.cursor/rules/: globals.mdc
.cursor/rules/dev-rules/: todo.mdc
.github/workflows/: backend-dependency-check.yml  backend-lint.yml  backend-unit-tests.yml  dependency-check.yml  frontend-build.yml  frontend-dependency-check.yml  frontend-lint.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  pyproject.toml  test_langchain_service.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  chat.py
backend/app/application/interfaces/: __init__.py
backend/app/application/use_cases/: __init__.py  chat.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  conversation.py  session.py
backend/app/domain/repositories/: __init__.py  repositories.py
backend/app/domain/services/: __init__.py  services.py
backend/app/domain/value_objects/: __init__.py  message.py
backend/app/infrastructure/: __init__.py  config.py  database.py  dependencies.py  langchain_logging.py  langfuse_handler.py  logging.py
backend/app/infrastructure/repositories/: __init__.py  dynamodb_repository.py  postgres_repository.py
backend/app/infrastructure/services/: __init__.py  ai_service.py  cache_service.py  chunk_utils.py  langchain_ai_service.py  langgraph_ai_service.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  dynamodb.py  postgres.py
backend/app/presentation/: __init__.py
backend/app/presentation/controllers/: __init__.py  chat_controller.py
backend/app/presentation/middleware/: error_handler.py  request_id.py
backend/app/presentation/models/: error.py
backend/app/presentation/routers/: __init__.py  chat.py  health.py  sse.py
backend/app/presentation/websocket/: __init__.py  chat_handler.py  connection_manager.py
backend/app/usecase/: __init__.py
backend/app/usecase/dto/: __init__.py  chat.py
backend/app/usecase/use_cases/: chat.py
backend/tests/: __init__.py  test_main.py
docs/design/: 0-index.md  architecture.md  dataflow.md  directory-structure.md  tech-stack.md
docs/design/lambda/: 0-index.md  dir-structure.md  iac-comparison.md  tech-stack.md
docs/development/: 0-index.md  ai-services-comparison.md  branch.md  coding-rules.md  langchain-testing.md  langchain.md  logging-and-error-handling.md  setup.md  websocket.md
docs/development/ci/: 0-index.md  git-hook.md  github-actions.md
docs/development/coding-rules/: 0-index.md  backend.md  docker.md  frontend.md  general.md  review.md
docs/development/lambda/: 0-index.md  deploy.md  dev-flow.md  setup.md
docs/development/tools/: 0-index.md  apidog.md  coderabbit.md  dbeaver.md  langfuse.md  localstack.md  make-command.md  mcp.md  postgresql.md
docs/operation/: 0-index.md
docs/operation/aws/: 0-index.md  services.md
docs/requirements/: 0-index.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  vite-env.d.ts
frontend/src/components/: ChatInterface.css  ChatInterface.tsx
frontend/src/hooks/: useWebSocket.ts
lambda/: README.md  app.py  cdk.json  deploy.sh  destroy.sh  pyproject.toml
lambda/cdk/: cdk.json
lambda/functions/archive_conversation/: lambda_function.py
lambda/functions/cleanup_sessions/: lambda_function.py
lambda/functions/generate_stats/: lambda_function.py
lambda/infra/: __init__.py  lambda_stack.py
lambda/tests/unit/: test_lambda_stack.py
localstack/init-scripts/: dynamodb.sh  s3.sh  sqs.sh
