[project]
name = "backend"
version = "0.1.0"
description = "AI Chatbot API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "hiredis==2.3.2",
    "boto3==1.34.0",
    "google-generativeai==0.3.2",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "ruff==0.3.4",
]

[dependency-groups]
dev = [
    "ruff==0.3.4",
]
