[project]
name = "backend"
version = "0.1.0"
description = "AI Chatbot API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "websockets==15.0.1",
    "sqlalchemy==2.0.44",
    "alembic==1.17.1",
    "psycopg2-binary==2.9.11",
    "asyncpg==0.30.0",
    "redis==7.0.1",
    "hiredis==3.3.0",
    "boto3==1.40.68",
    "google-generativeai==0.8.5",
    "python-multipart==0.0.20",
    "python-dotenv==1.2.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "ruff==0.14.4",
]
