[project]
name = "backend"
version = "0.1.0"
description = "AI Chatbot API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.1",
    "uvicorn[standard]==0.38.0",
    "websockets==15.0.1",
    "sqlalchemy==2.0.44",
    "alembic==1.17.1",
    "psycopg2-binary==2.9.11",
    "asyncpg==0.30.0",
    "greenlet==3.2.4",
    "redis==7.0.1",
    "hiredis==3.3.0",
    "boto3==1.40.71",
    "python-multipart==0.0.20",
    "python-dotenv==1.2.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    # Logging
    "structlog>=25.5.0",
    # LangChain
    "langchain>=1.0.5",
    "langchain-core>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.2",
    # LangGraph
    "langgraph>=1.0.3",
    "langfuse>=3.10.1",
    # MCP (Model Context Protocol)
    "fastmcp>=2.14.1",
    # Security: CVE-2025-66418, CVE-2025-66471 対応
    "urllib3>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "ruff==0.14.4",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pip-audit>=2.7.0",
    "types-redis>=4.6.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# サードパーティライブラリの型チェック設定
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "langgraph.*",
    "langfuse.*",
    "hiredis.*",
    "structlog.*",
]
ignore_missing_imports = true
